--- a/Day3 - CNN MNIST tensorflow/MNIST.ipynb
+++ b/Day3 - CNN MNIST tensorflow/MNIST.ipynb
@@ -145,13 +145,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "# forward propagation\n",
     "\n",
-    "def cnn(x, weights, biases):\n",
+    "def cnn(x, weights, biases, keep_prob):\n",
     "    x = tf.reshape(x, shape= [-1, input_width, input_height, input_channels])\n",
     "    # reshape() infers the 4th argument (-1) on its by using the remaining parameters passed\n",
     "    \n",
@@ -163,7 +163,10 @@
     "    \n",
     "    hidden_input = tf.reshape(conv2_pool, shape= [-1, input_size_to_hidden])\n",
     "    hidden_output_before_activation = tf.add(tf.matmul(hidden_input, weights['wh1']), biases['bh1'])\n",
-    "    hidden_output = tf.nn.relu(hidden_output_before_activation)\n",
+    "    hidden_output_before_dropout = tf.nn.relu(hidden_output_before_activation)\n",
+    "    \n",
+    "    # dropout\n",
+    "    hidden_output = tf.nn.dropout(hidden_output_before_dropout, keep_prob)  # requires a keep probability\n",
     "    \n",
     "    output = tf.add(tf.matmul(hidden_output, weights['wo']), biases['bo'])\n",
     "    # no activation function at OL => identity function\n",
@@ -172,18 +175,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "x = tf.placeholder(\"float\", [None, input_pixels])\n",
     "y = tf.placeholder(tf.int32, [None, n_out])\n",
-    "pred = cnn(x, weights, biases)"
+    "keep_prob = tf.placeholder(\"float\")\n",
+    "pred = cnn(x, weights, biases, keep_prob)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,38 +216,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1453159.7010133862\n",
-      "22647.020693294704\n",
-      "13411.90772518143\n",
-      "9148.834531696117\n",
-      "9711.104284745816\n",
-      "9578.415880334327\n",
-      "10536.908107358217\n",
-      "9490.737779185176\n",
-      "7860.013340576938\n",
-      "9969.966320138716\n",
-      "7697.003306514548\n",
-      "6330.487920158922\n",
-      "6121.957824231386\n",
-      "4607.35151683891\n",
-      "6492.656452139168\n",
-      "3620.9396067899756\n",
-      "3541.1860716620827\n",
-      "3959.8338285684586\n",
-      "3040.938545821309\n",
-      "2978.586127194836\n",
-      "4338.340549856659\n",
-      "2434.455849325508\n",
-      "3759.679784655571\n",
-      "2295.076699820028\n",
-      "2828.9229876884883\n"
+      "785275.53303051\n",
+      "35457.35568034649\n",
+      "20277.614521607757\n",
+      "15582.253920286894\n",
+      "12436.652538846207\n",
+      "9756.878999612352\n",
+      "8103.262329074439\n",
+      "8876.489596855135\n",
+      "6715.499981495434\n",
+      "6322.816897458956\n",
+      "5794.814815652793\n",
+      "4552.247269296397\n",
+      "5368.716234457323\n",
+      "4436.687722638009\n",
+      "3140.9010596581265\n",
+      "3458.5492105934454\n",
+      "3618.168502415032\n",
+      "3813.8411255661817\n",
+      "2810.8001666362575\n",
+      "2654.0935754806064\n",
+      "2078.341089004947\n",
+      "2393.927128434181\n",
+      "1970.5932851871362\n",
+      "2232.0457742484587\n",
+      "1954.6628133021156\n"
      ]
     }
    ],
@@ -254,14 +258,14 @@
     "    total_cost = 0\n",
     "    for j in range(num_batches):\n",
     "        batch_x, batch_y = mnist.train.next_batch(batch_size)\n",
-    "        c, _ = sess.run([cost, optimize], feed_dict= {x:batch_x, y:batch_y})\n",
+    "        c, _ = sess.run([cost, optimize], feed_dict= {x:batch_x, y:batch_y, keep_prob:0.8})\n",
     "        total_cost += c\n",
     "    print(total_cost)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,34 +276,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "predictions, correct_predictions = sess.run([predictions, correct_predictions], \n",
-    "                                      feed_dict = {x: mnist.test.images, y: mnist.test.labels})\n",
+    "                                      feed_dict = {x: mnist.test.images, y: mnist.test.labels, keep_prob:1.0})\n",
     "correct = correct_predictions.sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of correctly predicted values :  9874\n",
-      "Score :  98.74000000000001 %a\n"
+      "Score of correctly predicted values :  98.0 %\n"
      ]
     }
    ],
    "source": [
-    "print(\"Number of correctly predicted values : \", correct)\n",
-    "print(\"Score : \", (correct/mnist.test.images.shape[0])*100, \"%a\")"
+    "print(\"Score of correctly predicted values : \", (correct/mnist.test.images.shape[0])*100,\"%\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
