--- a/Day4 - CNN MNIST keras/MNIST_keras.ipynb
+++ b/Day4 - CNN MNIST keras/MNIST_keras.ipynb
@@ -56,30 +56,30 @@
    "outputs": [],
    "source": [
     "# constants\n",
+    "num_classes = 10                               # number of classes\n",
     "\n",
-    "input_width = 28\n",
-    "input_height = 28\n",
-    "input_channels = 1\n",
+    "input_width = 28                               # pixels of the images\n",
+    "input_height = 28                              # pixels of the images\n",
+    "input_channels = 1                             # number of channels\n",
     "\n",
-    "n_conv1 = 32\n",
-    "n_conv2 = 64\n",
-    "stride_conv1 = 1\n",
-    "stride_conv2 = 1\n",
+    "n_conv1 = 32                                   # number of units in convolutional layer 1\n",
+    "n_conv2 = 64                                   # number of units in convolutional layer 2 \n",
+    "stride_conv1 = 1                               # stride used in convolutional layer 1\n",
+    "stride_conv2 = 1                               # stride used in convolutional layer 2\n",
     "\n",
-    "conv1_k = 5\n",
-    "conv2_k = 5\n",
+    "conv1_k = 5                                    # filter size for layer 1\n",
+    "conv2_k = 5                                    # filter size for layer 2\n",
     "\n",
-    "max_pool1_k = 2\n",
+    "max_pool1_k = 2                                # filter for max pooling layer\n",
     "max_pool2_k = 2\n",
     "\n",
-    "n_hidden = 1024\n",
-    "n_out = 10\n",
+    "n_hidden = 1024                                # number of units in hidden layer\n",
+    "n_out = num_classes                            # number of units in output layer = number of classes\n",
     "\n",
     "input_size_to_hidden = (input_width//(max_pool1_k*max_pool2_k)) * (input_height//(max_pool1_k*max_pool2_k)) *n_conv2\n",
     "\n",
-    "epochs = 15\n",
-    "batch_size = 128\n",
-    "num_classes = 10"
+    "epochs = 15                                    # iterations\n",
+    "batch_size = 128\n"
    ]
   },
   {
@@ -175,6 +175,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Convolutional Layer 1\n",
     "model.add(Conv2D(n_conv1, kernel_size=(conv1_k, conv2_k),\n",
     "                 activation='relu',\n",
     "                 input_shape=input_shape))"
@@ -186,6 +187,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Max pooling layer 1\n",
     "model.add(MaxPooling2D(pool_size=(max_pool1_k, max_pool1_k)))"
    ]
   },
@@ -195,6 +197,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Convolutional Layer 2\n",
     "model.add(Conv2D(n_conv2, kernel_size = (conv2_k, conv2_k), activation='relu'))"
    ]
   },
@@ -204,7 +207,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.add(MaxPooling2D(pool_size=(max_pool2_k, max_pool2_k)))"
+    "# Max pooling layer 2\n",
+    "model.add(MaxPooling2D(pool_size=(max_pool2_k, max_pool2_kk)))"
    ]
   },
   {
@@ -213,6 +217,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Dropout and Flatten layers\n",
     "model.add(Dropout(0.25))\n",
     "model.add(Flatten())"
    ]
@@ -223,6 +228,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Hidden Layer\n",
     "model.add(Dense(batch_size, activation='relu'))\n",
     "model.add(Dropout(0.5))"
    ]
@@ -233,6 +239,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Output Layer\n",
     "model.add(Dense(num_classes, activation='softmax'))"
    ]
   },
@@ -242,6 +249,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# compile\n",
     "model.compile(loss=keras.losses.categorical_crossentropy,\n",
     "              optimizer=keras.optimizers.Adadelta(),\n",
     "              metrics=['accuracy'])\n"
@@ -301,6 +309,7 @@
     }
    ],
    "source": [
+    "# fit\n",
     "model.fit(x_train, y_train, batch_size=batch_size, epochs=epochs, verbose=1, validation_data=(x_test, y_test))"
    ]
   },
@@ -319,6 +328,7 @@
     }
    ],
    "source": [
+    "# performance\n",
     "score = model.evaluate(x_test, y_test, verbose=0)\n",
     "print('Test loss:', score[0])\n",
     "print('Test accuracy:', score[1])"
